--- a/.github/workflows/all-tests.yml
+++ b/.github/workflows/all-tests.yml
@@ -32,6 +32,17 @@ jobs:
     runs-on: ubuntu-latest
     needs: all-tests
     if: contains(github.head_ref, 'dependabot')
+    permissions:
+      actions: write
+      checks: write
+      contents: write
+      deployments: write
+      issues: write
+      packages: write
+      pull-requests: write
+      repository-projects: write
+      security-events: write
+      statuses: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
