--- a/.github/workflows/all-tests.yml
+++ b/.github/workflows/all-tests.yml
@@ -1,14 +1,11 @@
 name: All Tests
 on:
   pull_request:
-    branches: [develop, master, milestone, dependabot-update]
+    # branches: [develop, master, milestone, dependabot-update]
 jobs:
   all-tests:
     timeout-minutes: 60
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./app-nuxt-3
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -35,6 +32,17 @@ jobs:
     runs-on: ubuntu-latest
     needs: all-tests
     if: contains(github.head_ref, 'dependabot')
+    permissions:
+      actions: write
+      checks: write
+      contents: write
+      deployments: write
+      issues: write
+      packages: write
+      pull-requests: write
+      repository-projects: write
+      security-events: write
+      statuses: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
