--- a/.github/workflows/all-tests.yml
+++ b/.github/workflows/all-tests.yml
@@ -54,7 +54,7 @@ jobs:
           git config --global user.name "hiroya.yabiku"
           git fetch origin dependabot-update
           git checkout dependabot-update
-          git merge origin/develop
+          git merge origin/develop --allow-unrelated-histories
           git push origin dependabot-update
       - name: Enable auto-merge for Dependabot PRs
         # if: ${{ steps.metadata.outputs.update-type == 'version-update:semver-patch' }}
