--- a/.github/workflows/all-tests.yml
+++ b/.github/workflows/all-tests.yml
@@ -53,7 +53,7 @@ jobs:
           git config --global user.email "hiroya.yabiku@prtimes.co.jp"
           git config --global user.name "hiroya.yabiku"
           git rebase develop
-          git push origin dependabot-update
+          git push dependabot-update
       - name: Enable auto-merge for Dependabot PRs
         # if: ${{ steps.metadata.outputs.update-type == 'version-update:semver-patch' }}
         run: gh pr merge --auto --merge "$PR_URL"
