--- a/.github/workflows/all-tests.yml
+++ b/.github/workflows/all-tests.yml
@@ -52,9 +52,10 @@ jobs:
         run: |
           git config --global user.email "hiroya.yabiku@prtimes.co.jp"
           git config --global user.name "hiroya.yabiku"
-          git fetch origin dependabot-update
+          git fetch origin develop
           git checkout dependabot-update
-          git merge origin/develop --no-edit --allow-unrelated-histories
+          git merge origin/develop --allow-unrelated-histories
+          git commit -m "Merge develop into dependabot-update"
           git push origin dependabot-update
       - name: Enable auto-merge for Dependabot PRs
         # if: ${{ steps.metadata.outputs.update-type == 'version-update:semver-patch' }}
