--- a/.github/workflows/all-tests.yml
+++ b/.github/workflows/all-tests.yml
@@ -48,16 +48,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: 'develop'
-      - name: Merge develop branch into dependabot-update
+      - name: Update pull request branch
         run: |
-          git config --global user.email "hiroya.yabiku@prtimes.co.jp"
-          git config --global user.name "hiroya.yabiku"
-          git fetch origin develop
-          git checkout -b dependabot-yabiku origin/dependabot-update
-          git push -u origin dependabot-yabiku
-      - name: Enable auto-merge for Dependabot PRs
-        # if: ${{ steps.metadata.outputs.update-type == 'version-update:semver-patch' }}
-        run: gh pr merge --auto --merge "$PR_URL"
-        env:
-          PR_URL: ${{github.event.pull_request.html_url}}
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          curl "https://github.com/h-yabi/github-actions-test/pull/12" \
+            -H 'Authorization: token ${{ secrets.GITHUB_TOKEN }}' \
+            -d '{ "base": "main" }'
